--- a/WebAppVenda/appsettings.json
+++ b/WebAppVenda/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppVendaContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppVendaContext-33d45ac2-f13d-407a-add7-396a79417b79;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
