Gerando conexão com SQL Server automaticamente

--- a/WebAppVenda/appsettings.json
+++ b/WebAppVenda/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebAppVendaContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppVendaContext-33d45ac2-f13d-407a-add7-396a79417b79;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebAppVendaContext": "Server=(localdb)\\mssqllocaldb;Database=Venda;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
